[tool.poetry]
name = "my_agent"
version = "0.1.0"
description = "Example LangGraph project with RAG capabilities"
authors = ["langchain-ai"]
packages = [{ include = "my_agent" }]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
langgraph = "^0.2.0"
langchain_core = ">=0.3.17,<0.4.0"
langchain_anthropic = ">=0.3.0"
langchain_openai = ">=0.2.0"
langchain_community = ">=0.3.0"
langchain-chroma = "^0.1.4"
langchain_voyageai = ">=0.1.0"
tavily-python = "^0.3.0"
tiktoken = ">=0.7.0,<1.0.0"
chromadb = "^0.4.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
nest-asyncio = "^1.6.0"
numpy = ">=1.26.4"
pydantic = "^2.0.0"
aiohttp = "^3.11.1"
SQLAlchemy = "^2.0.36"
fastapi = "^0.115.5"
dataclasses-json = "^0.6.7"
orjson = "^3.10.11"
tenacity = "^8.5.0"
tqdm = "^4.67.0"
typing-extensions = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"